--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,5 @@ spring.security.filter.dispatcher-types=REQUEST,ERROR,ASYNC
 
 # ???????????
 logging.level.ru.gubenko.server1=DEBUG
+
+spring.thymeleaf.cache=false
