fix open messages from dashboard/messages

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,5 +22,7 @@ spring.security.filter.dispatcher-types=REQUEST,ERROR,ASYNC
 
 # ???????????
 logging.level.ru.gubenko.server1=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
 
 spring.thymeleaf.cache=false
